--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 aiogram==2.25.1
 python-dotenv==1.0.0
-pydantic==2.5.2
-pydantic-settings==2.1.0 
+aiofiles==23.2.1
+Pillow==10.1.0
+psutil==5.9.5
+aiohttp==3.9.1
+uvicorn==0.25.0
+fastapi==0.108.0
+redis==5.0.1
+prometheus-client==0.19.0
+requests==2.31.0
+python-json-logger==2.0.7 
